--- a/src/app/gameboard/gameboard.component.html
+++ b/src/app/gameboard/gameboard.component.html
@@ -1,22 +1,22 @@
 <p>Player Name: {{newPlayer.name}}</p>
 <div class="row">
-  <div class="col-xs-9">
+  <div class="col-md-6">
     <canvas id="gameBase"></canvas>
   </div>
-  <div class="col-xs-3">
+  <div class="col-md-6">
     <div class="jumbotron">
       <h3>You current score:</h3>
       <h1 [innerHTML]='newPlayer.score'></h1>
     </div>
     <div class="row">
-      <div class="well col-xs-6">
+      <div class="col-md-6">
         <ul> High Scores:
           <li *ngFor="let item of scores | async">
-            {{item.name}} // {{item.score}}
+            <span *ngIf="item.name">{{item.name}}</span><span *ngIf="!item.name">Anonymous</span> // {{item.score}}
           </li>
         </ul>
       </div>
-      <div class="col-xs-6">
+      <div class="col-md-6">
         <ul> Your Recent Scores:
           <li *ngFor="let item of recentScores">
             {{item.score}}
@@ -24,10 +24,5 @@
         </ul>
       </div>
     </div>
-        <!-- <ul> High Scores!
-      <li *ngFor="let item of gameBoard.highScores">
-        {{item}}
-      </li>
-    </ul> -->
   </div>
 </div>
